--- a/Hunt the Wumpus 3/Hunt the Wumpus 3/Hunt the Wumpus 3.csproj
+++ b/Hunt the Wumpus 3/Hunt the Wumpus 3/Hunt the Wumpus 3.csproj
@@ -107,12 +107,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes.cs">
+    <Compile Include="3dClasses.cs" />
+    <Compile Include="Game1.cs" />
+    <Compile Include="CharacterClasses.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
