--- a/Hunt the Wumpus 3/Hunt the Wumpus 3/Hunt the Wumpus 3.csproj
+++ b/Hunt the Wumpus 3/Hunt the Wumpus 3/Hunt the Wumpus 3.csproj
@@ -13,7 +13,7 @@
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
-    <XnaProfile>HiDef</XnaProfile>
+    <XnaProfile>Reach</XnaProfile>
     <XnaCrossPlatformGroupID>ad82733e-9717-49d3-80de-dd6ba0fb31c8</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
